--- a/wiki/StandardC.wiki
+++ b/wiki/StandardC.wiki
@@ -1,29 +1,19 @@
-#summary C Standard Libraries.
+#summary C more or less standard Libraries.
 
 == Introduction ==
 
-The goal is to be able to call from AS3 the following libraries
+Here we want to provide native implementations of common C functions
+based on the *C Standard Library* (C99) and the *POSIX Standard Library* (POSIX.1).
 
- * ANSI Standard library
- assert.h, ctype.h, errno.h, float.h, limits.h, locale.h,<br>
- math.h, setjmp.h, signal.h, stdarg.h, stddef.h,<br>
- stdio.h, stdlib.h, string.h, time.h
-
- * POSIX.1 library
- that are compatible with
-   * Mac OS X (gcc 3.3)
-   * Microsoft Windows Runtime Library (MS VIsual C++ 7.0)
-   * Linux (gcc 3.2.2)
- unistd.h, dirent.h, etc.<br>
- see: http://www.crossplatformbook.com/posix.html
+So I edited this page to say "more or less standard", here why:
+ * the goal is to provide common cross platform small functionalities, not the whole C library
+ * we can not map 1 to 1, C to AS3
+ * we try to do something like [http://docs.python.org/library/os.html Python os]
+ * in some case we can take some liberties on how something is implemented
 
 references:
- * http://en.wikipedia.org/wiki/ANSI_C
- * http://en.wikipedia.org/wiki/POSIX
+ * http://en.wikipedia.org/wiki/C_standard_library
  * http://en.wikipedia.org/wiki/C_POSIX_library
- * http://en.wikipedia.org/wiki/Category:C_standard_library
- * http://www.cplusplus.com/reference/clibrary/
-
 
 example:
 {{{
@@ -43,11 +33,38 @@ var test:String = getenv( "HOME" );
 
 }}}
 
+very similar but still a bunch of differences
+ * we use *String*, not *char*
+ * we do not return a pointer
+
+other example:
+{{{
+//C
+#include <string.h>
+
+//size_t strlen ( const char * str );
+char s[20] = "hello world";
+printf( "The string is %u characters long.\n", strlen(s) );
+}}}
+
+{{{
+//AS3
+import C.string.*;
+
+var s:String = "hello world";
+//public function strlen( str:String ):uint
+var len:uint = strlen(s);
+trace( "The string is " + len + " characters long." );
+}}}
+
+again, similar but a bunch of differences
+ * we completely ignore the typedef *size_t*, we return an unsigned integer
+ * we don't make any difference between a *char* or *const char*, we use *String*
 
 advantages:
-
  * the cross-plaform part is done in the native part (C/C++) of the avmshell so you don't need to bother about it in AS3.
  * most of the function signatures are equivalent, so you don't need to re-learn how to use those functions or really have little to learn.
+ * it gives a great cross-platform base to implement higher API
 
 == Implementation ==
 
