Edited wiki page through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -10,7 +10,7 @@
     * [CrossPlatform Cross Platform]
     * [Roadmap Roadmap]
   * [API API reference]
-    * [StandardC C Standard Libraries]
+    * [StandardC C Libraries]
     * [FlashPlatform Flash Platform API]
     * [AVMPlus AVMPlus API]
   * Documentation
