--- a/configs/redtamarin/changelog.txt
+++ b/configs/redtamarin/changelog.txt
@@ -1,3 +1,8 @@
+* 0.2.7
+- added VMPI_access, VMPI_getcwd, VMPI_setenv, VMPI_unsetenv
+- added C.string, C.errno in AS3 and CStringClass, CerrnoClass in C/C++
+- all tested under OS X 10.6 / Windows XP SP2 / Ubuntu 8.04
+
 * 0.2.6
 - reorganized everything
 - tamarin-redux is sync'ed on redshell repo
