--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -32,7 +32,7 @@ In short, that means we provide you `avmplus::FileSystem.write( filename, data )
 
 The Lower Level API, or *AVMAPI*, is a combination of the Builtins classes, the Standard C classes and the AVMPlus classes.
 
-*for ex:* C.stdlib.* , avmplus.FileSystem, avmplus.OperatingSystem, etc.
+*for ex:* C.stdlib.!* , avmplus.FileSystem, avmplus.OperatingSystem, etc.
 
 those classes are
   * always compiled within redtamarin
