--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -54,4 +54,20 @@ The Flash Platform API, or *FPAPI*, is based on the fact that most of our/your u
 *for ex:* `flash.display.Sprite`, `flash.system.Capabilities`, `flash.filesystem.File`, etc.
 
 Tamarin by default implement almost NONE of the FPAPI.
+
+With redtamarin we took an hybrid approach
+  * we have an AS3 project [http://code.google.com/p/maashaack/wiki/avmglue avmglue] which define all the classes, packages, etc.
+  of the FPAPI as mock objects (or dumb implementations if you prefer).
+  * all those FPAPI are implemented with the versioning API
+  we make the different between FP_9_0, AIR_1_0, FP_10_0, AIR_2_0, etc.
+  (HAVE TO compile with ASC.jar, but can still use asdoc)
+  * on a case by case basis, and when we have the required lower level API to do so,
+  we add a concrete implementation of the FPAPI in parallel of the mock implementation.
+  For that, we use the Conditional Compilations `MOCK:API` and `REDTAMARIN::API`.
+  * generates `*.abc` files that need to be included with your project
+
+TODO
+
 === Layer 2 : Any Other ===
+
+TODO
