--- a/wiki/Build.wiki
+++ b/wiki/Build.wiki
@@ -60,8 +60,72 @@ The release build use `release.xml` and should be used to produce a release of r
 
 That's basically all the files that end up in a zip files for the download section.
 
-This build will always generate asc.jar, even if it already exists.
+usage
+{{{
+$ ant -f release.xml
+}}}
+
+This build will always generate asc.jar.
 
 This build will always run the `nativegen.py` on the `shell_toplevel.as`.
+
+This build will always generate a *release* version of redtamarin, eg. *redshell*<br>
+and also a *release-debugger* version, eg. *redshell_d*.
+
+*note:*<br>
+for now we keep things simple, so the `redshell` executable is always 32bit.<br>
+Later, we will generate also 64bit versions.
+
+And finally, everything is packaged in a zip
+{{{
+redtamarin_0.3.0.1234_WIN.zip
+redtamarin_0.3.0.1234_OSX.zip
+redtamarin_0.3.0.1234_NIX.zip
+}}}
+
+
+=== Misc. ===
+
+==== file size ====
+By default, the redtamarin executable is about 2MB, if you need a smaller executable<br>
+there is [http://upx.sourceforge.net/ UPX], the Ultimate Packer for eXecutables :).
+
+example:
+{{{
+$ upx --brute -o redshell_c redshell
+....
+                       Ultimate Packer for eXecutables
+                          Copyright (C) 1996 - 2009
+UPX 3.04        Markus Oberhumer, Laszlo Molnar & John Reiser   Sep 27th 2009
+
+        File size         Ratio      Format      Name
+   --------------------   ------   -----------   -----------
+   1983016 ->    607419   30.63%   Mach/AMD64    redshell_c                    
+
+Packed 1 file.
+}}}
+
+Here, for example, the redshell executable is reduced to 600KB.
+
+note:<br>
+for OSX, you can install it this way `$sudo port install upx`
+
+
+==== shell ====
+
+We always compile redtamarin with the eval option, so you may want to use `redshell` in bash scripts :).
+
+more infos<br>
+TODO
+
+note:<br>
+sadly `eval()` will work only with builtins, you can not use FileSystem, OperatingSystem, etc.
+
+
+==== server side ====
+
+Technically you can use redtamarin right now as a CGI process on any server,<br>
+wehn some API like MySQL and SQLite will be added I'll give more infos<br>
+(and probably a whole wiki section just for the server side of things).
 
 TODO
