Edited wiki page ASC through web user interface.

--- a/wiki/ASC.wiki
+++ b/wiki/ASC.wiki
@@ -48,14 +48,24 @@ Usage:
 
 === Details ===
 
-A very basic usage
-
-helloworld.as
+with helloworld.as
 {{{
 trace( "hello world" );
 }}}
 
+a very basic usage
 {{{
 $ java -jar asc.jar -AS3 -import builtin.abc -import toplevel.abc helloworld.as
 helloworld.abc, 127 bytes written
+}}}
+
+
+When you need to compile "system" libraries you will need more options
+{{{
+$ java -jar asc.jar -abcfuture -builtin -apiversioning -import builtin.abc shell_toplevel.as
+}}}
+
+or
+{{{
+$ java -ea -DAS3 -DAVMPLUS -classpath asc.jar macromedia.asc.embedding.ScriptCompiler -abcfuture -builtin -apiversioning -import builtin.abc -out shell_toplevel shell_toplevel.as Domain.as ByteArray.as ...
 }}}
